# sdxl-attention-explorer

./: .gitignore  README.md  pyproject.toml
examples/: visualize_sdxl.py
src/sdxl_attention/: __init__.py  aggregation.py  processor.py  recorder.py  store.py  tokens.py  visualization.py
tests/: test_aggregation.py  test_processor.py  test_recorder.py  test_store.py  test_tokens.py  test_visualization.py
